correction version mobile

--- a/css/apropos.css
+++ b/css/apropos.css
@@ -109,7 +109,7 @@ h1 {
     }
 
     .description {
-        height: 45vh;
+        height: 60vh;
         padding: 2%;
     }
 }
