--- a/css/chiot.css
+++ b/css/chiot.css
@@ -112,6 +112,10 @@ span {
         height: 15em;
     }
 
+    .slider__btn {
+        width: 20%;
+    }
+
     h1{
         font-size: 40px;
     }
